Add green spaces

--- a/Crowded Places/Project.toml
+++ b/Crowded Places/Project.toml
@@ -5,6 +5,7 @@ Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 Common = "32073bc9-f332-4340-a5ee-de7f7a68734c"
+Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 CoordRefSystems = "b46f11dc-f210-4604-bfba-323c1ec968cb"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataToolkit = "dc83c90b-d41d-4e55-bdb7-0fc919659999"
@@ -17,4 +18,5 @@ GeoStats = "dcc97b0b-8ce5-5539-9008-bb190f959ef6"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 KangarooTwelve = "2a5dabf5-6a39-42aa-818d-ce8a58d1b312"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 ShiftedArrays = "1277b4bf-5013-50f5-be3d-901d8477a67a"
