--- a/Common/Project.toml
+++ b/Common/Project.toml
@@ -6,6 +6,7 @@ version = "0.0.1"
 [deps]
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 AmbulatoryAssessmentAnalysis = "562e0ae9-293a-420f-a40f-ca28bb40a5c4"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
@@ -28,6 +29,7 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 [compat]
 AlgebraOfGraphics = "0.10.4"
 AmbulatoryAssessmentAnalysis = "^0.0"
+CSV = "0.10.15"
 CairoMakie = "0.13.4"
 Chain = "0.6.0"
 Clustering = "0.15.8"
