--- a/Home Stay/Project.toml
+++ b/Home Stay/Project.toml
@@ -2,6 +2,7 @@
 AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 AmbulatoryAssessmentAnalysis = "562e0ae9-293a-420f-a40f-ca28bb40a5c4"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 Common = "32073bc9-f332-4340-a5ee-de7f7a68734c"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
