--- a/Common/Project.toml
+++ b/Common/Project.toml
@@ -27,17 +27,17 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 
 [compat]
-AlgebraOfGraphics = "0.10.4"
+AlgebraOfGraphics = "0.11.3"
 AmbulatoryAssessmentAnalysis = "^0.0"
 CSV = "0.10.15"
-CairoMakie = "0.13.4"
-Chain = "0.6.0"
+CairoMakie = "0.15.5"
+Chain = "0.6.0, 1"
 Clustering = "0.15.8"
 Colors = "0.13.0"
 Dates = "1.11.0"
 Distances = "0.10.12"
 Distributions = "0.25.120"
-GeoStats = "0.78.3"
+GeoStats = "0.81"
 GeometryBasics = "0.5.9"
 LocalPoly = "0.2.0"
 MixedModels = "4.34.1"
