--- a/Home Stay/Project.toml
+++ b/Home Stay/Project.toml
@@ -9,5 +9,12 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataToolkit = "dc83c90b-d41d-4e55-bdb7-0fc919659999"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+Effects = "8f03c58b-bd97-4933-a826-f71b64d2cca2"
 KangarooTwelve = "2a5dabf5-6a39-42aa-818d-ce8a58d1b312"
+MixedModels = "ff71e718-51f3-5ec2-a782-8ffcbfa3c316"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
+
+[sources]
+AmbulatoryAssessmentAnalysis = {rev = "main", url = "https://github.com/CarlBittendorf/AmbulatoryAssessmentAnalysis.jl"}
+Common = {path = "../Common"}
